<resources>
    <string name="app_name">MVVM SpaceX</string>
    <string name="heading_count">Count:</string>
    <string name="int_zero">0</string>
    <string name="data">Data:</string>

    <string name="failure_network_connection">NetworkConnection</string>
    <string name="failure_server_error">ServerError</string>
    <string name="failure_server_http_error">ServerError (HTTP Status %1$s)</string>
    <string name="failure_permission_error">PermissionError</string>
    <string name="failure_network_on_main_thread">NetworkOnMainThread</string>
    <string name="failure_empty_result">EmptyResult</string>
    <string name="failure_not_implemented">NotImplemented</string>

    <string name="snack_no_browser_available">No Web Browser Available</string>

    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="hash">#</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="refresh">Refresh</string>
    <string name="mission_icon">Mission Icon</string>

    <string name="twitter">Twitter</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="website">Website</string>

    <!--DO NOT CHANGE THESE -->
    <string name="app_pref_file_key">com.ntxdroid.spacex.APP_PREF_FILE_KEY</string>
    <string name="app_pref_key_use_day_night">com.ntxdroid.spacex.use_day_night</string>
    <string name="app_pref_key_day_night_on">com.ntxdroid.spacex.day_night_on</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_launches">Launches</string>
    <string name="no_details">No details provided.</string>

</resources>
